--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "f1-telemetry",
   "version": "1.0.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
